# rendering_stuff_rs

./: .gitignore  Cargo.toml  build.rs
.cargo/: config.toml
_old/: 1_main.rs  camera.rs  gl_abstractions.rs  matrices.rs  ndarray_abstractions.rs  render_context.rs  vertices.rs  window_loader.rs
lib/camera/: cargo.toml
lib/camera/src/: lib.rs
lib/matrices/: cargo.toml
lib/matrices/src/: errors.rs  float_operations.rs  generic_arrays.rs  lib.rs  matrix.rs  matrix_error.rs  matrix_fns.rs  number_arrays.rs  opengl_arrays.rs  type_conversions.rs  vector.rs  vector_fns.rs
lib/opengl_abstractions/: cargo.toml
lib/opengl_abstractions/src/: lib.rs
lib/ppm_viewer/: cargo.toml
lib/ppm_viewer/src/: lib.rs  test.ppm
lib/render_context/: cargo.toml
lib/render_context/src/: lib.rs
lib/shaders/: cargo.toml
lib/shaders/src/: lib.rs
lib/window/: cargo.toml
matrices/: cargo.toml
matrices/src/: cartesian_product.rs  constructors.rs  enums.rs  errors.rs  float_operations.rs  generic_arrays.rs  lib.rs  matrix.rs  number_arrays.rs  numbers.rs  opengl_arrays.rs  traits.rs  type_conversions.rs
matrices/tests/: integration_tests.rs  tests.rs
opengl_abstractions/: build.rs  cargo.toml
opengl_abstractions/shaders_glsl/: blinn_phong_orthographic_fragment.glsl  simple_orthographic_fragment.glsl  simple_orthographic_vertex.glsl
opengl_abstractions/src/: _modified_shaders.rs  _original.rs  enums.rs  gl.rs  high_level_abstractions.rs  intermediate_opengl.rs  lib.rs  raw_opengl.rs  shader_abstractions.rs  shaders.rs
ppm_viewer/: cargo.toml
ppm_viewer/src/: lib.rs
ray_tracer/: test
render_context/: cargo.toml
render_context/src/: camera.rs  errors.rs  lib.rs  lighting.rs  render.rs  window.rs
renders/: Cargo.toml
renders/src/: cube.rs  main.rs  original_main.rs
src/: 3_main.rs  _ray_tracer.rs  camera.rs  context.rs  gl_abstractions.rs  main.rs  matrices.rs  ndarray_abstractions.rs  render_context.rs  shaders.rs  vertices.rs  window_loader.rs
src/shaders_glsl/: blinn_phong_orthographic_fragment.glsl  blinn_phong_orthographic_vertex.glsl  fragment_shader.glsl  lighting_fragment_shader.glsl  lighting_vertex_shader.glsl  object_fragment_shader.glsl  object_vertex_shader.glsl  simple_orthographic_fragment.glsl  vertex_shader.glsl
window/: .gitignore  build.rs
window/src/: lib.rs
(+88 files in other folders)
