[package]
name = "renders"
version = "0.8.0"
edition = "2024"

# run cargo depgraph --all-deps to get graphviz source which can graph all dependencies


[dependencies]
rust-embed = { version = "8.7.2", default-features = false }

matrices = {path = "../matrices"}
opengl   = {path = "../opengl_abstractions"}
window   = {path = "../window"}
#ppm_viewer = {path = "../ppm_viewer"}
render_context   = {path = "../render_context"}
#shaders = {path = "../shaders"}