[package]
name = "renders"
version = "0.8.0"
edition = "2024"

# run cargo depgraph --all-deps to get graphviz source which can graph all dependencies


[dependencies]
numeracy = {git = "https://github.com/TheBookwyrms/numeracy.git"}
#ppm_viewer = {path = "../ppm_viewer"}
render_context   = {path = "../render_context"}
opengl   = {path = "../opengl_abstractions"}